--- a/main.html
+++ b/main.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pipopinette</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="index.js"></script>
+    <script src="index.js" defer async=false></script>
     
 </head>
-<body>
+<body>defer
     <main class="game">
    <div id="border-0-0-H" class="h border"></div>
    <div id="border-1-0-H"class="h border"></div>
@@ -18,6 +18,7 @@
     <div id="tile-0-0 " class="tile"></div>
    <div id="border-1-0-V " class="v border"></div>
    <div id="tile-1-0 " class="tile"></div>
+   
 </main>
 </body>
 </html>
