--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,46 @@
     <title>Pipopinette</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer async=false></script>
-    
-</head>
-<body>defer
-    <main class="game">
-   <div id="border-0-0-H" class="h border"></div>
-   <div id="border-1-0-H"class="h border"></div>
 
-   <div id="border-0-0-V" class=" v border"></div>
-    <div id="tile-0-0 " class="tile"></div>
-   <div id="border-1-0-V " class="v border"></div>
-   <div id="tile-1-0 " class="tile"></div>
-   
-</main>
+</head>
+
+<body>
+    <main class="game">
+        <div class="cross"></div>
+        <div id="border-0-0-H" class="h border"></div>
+        <div class="cross"></div>
+        <div id="border-1-0-H" class="h border"></div>
+        <div class="cross"></div>
+
+
+        <div id="border-0-0-V" class=" v border"></div>
+        <div id="tile-0-0" class="tile"></div>
+        <div id="border-1-0-V" class="v border"></div>
+        <div id="tile-1-0" class="tile"></div>
+        <div id="border-2-0-V" class="v border"></div>
+
+
+        <div class="cross"></div>
+        <div id="border-0-1-H" class="h border"></div>
+        <div class="cross"></div>
+        <div id="border-1-1-H" class="h border"></div>
+        <div class="cross"></div>
+
+        <div id="border-0-1-V" class=" v border"></div>
+        <div id="tile-0-1" class="tile"></div>
+        <div id="border-1-1-V" class="v border"></div>
+        <div id="tile-1-1" class="tile"></div>
+        <div id="border-2-1-V" class="v border"></div>
+
+        <div class="cross"></div>
+        <div id="border-0-2-H" class="h border"></div>
+        <div class="cross"></div>
+        <div id="border-1-2-H" class="h border"></div>
+        <div class="cross"></div>
+    </main>
+    <h1>Scores</h1>
+    <h3 id="first-player" class="player-score">X</h3>
+    <h3 id="second-player" class="player-score">Y</h3>
 </body>
+
 </html>
