Scores implementation (should be ) working

--- a/main.html
+++ b/main.html
@@ -46,8 +46,8 @@
         <div class="cross"></div>
     </main>
     <h1>Scores</h1>
-    <h3 id="first-player" class="player-score">X</h3>
-    <h3 id="second-player" class="player-score">Y</h3>
+    <h3 id="first-score" class="player-score">X</h3>
+    <h3 id="second-score" class="player-score">Y</h3>
 </body>
 
 </html>
