on crée le dom automatiquement et taille variable TODO : pas changer de joueur si rempli

--- a/main.html
+++ b/main.html
@@ -7,43 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pipopinette</title>
     <link rel="stylesheet" href="style.css">
+    <script src="creatingDom.js" defer async=false></script>
     <script src="index.js" defer async=false></script>
 
 </head>
 
 <body>
-    <main class="game">
-        <div class="cross"></div>
-        <div id="border-0-0-H" class="h border"></div>
-        <div class="cross"></div>
-        <div id="border-1-0-H" class="h border"></div>
-        <div class="cross"></div>
+    <main class="game" id="game">
 
-
-        <div id="border-0-0-V" class=" v border"></div>
-        <div id="tile-0-0" class="tile"></div>
-        <div id="border-1-0-V" class="v border"></div>
-        <div id="tile-1-0" class="tile"></div>
-        <div id="border-2-0-V" class="v border"></div>
-
-
-        <div class="cross"></div>
-        <div id="border-0-1-H" class="h border"></div>
-        <div class="cross"></div>
-        <div id="border-1-1-H" class="h border"></div>
-        <div class="cross"></div>
-
-        <div id="border-0-1-V" class=" v border"></div>
-        <div id="tile-0-1" class="tile"></div>
-        <div id="border-1-1-V" class="v border"></div>
-        <div id="tile-1-1" class="tile"></div>
-        <div id="border-2-1-V" class="v border"></div>
-
-        <div class="cross"></div>
-        <div id="border-0-2-H" class="h border"></div>
-        <div class="cross"></div>
-        <div id="border-1-2-H" class="h border"></div>
-        <div class="cross"></div>
     </main>
     <h1>Scores</h1>
     <h3 id="first-score" class="player-score">X</h3>
