--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <h1>Scores</h1>
     <h3 id="first-score" class="player-score">X</h3>
     <h3 id="second-score" class="player-score">Y</h3>
+    <div class="my-player" id="my-player"></div>
 </body>
 
 </html>
