first commit of indicator

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <h3 id="first-score" class="player-score">X</h3>
     <h3 id="second-score" class="player-score">Y</h3>
     <div class="my-player" id="my-player"></div>
+    <div class="player-playing" id="player-playing"> </div>
 </body>
 
 </html>
