--- a/public/menu.html
+++ b/public/menu.html
@@ -10,27 +10,32 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="menu-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap" rel="stylesheet">
     <script defer src="menu-main.js"></script>
 </head>
 
 <body>
+    <div class="title-container"> a
+        <h1 class="main-title blue">Pipopipette</h1>
+        <h1 class="main-title red">Pipopipette</h1>
+    </div>
 
-    <h1 class="main-title">Pipopipette</h1>
 
     <div class="container">
         <section class="join">
             <input type="text" class="join-input" id="join-input" placeholder="Join a Game (copy link or ID)">
-            <button class="enter-game" id="join-btn">✔️</button>
+            <button class="enter-game" id="join-btn">⭐</button>
         </section>
         <div class="divisor"></div>
         <section class="create">
             <h4 class="create-title">Or create one : </h4>
             <div class="settings">
-                <p class="params">Player count : </p>
-                <p class="params">Bot fill : </p>
-                <p class="params"> Game mode : </p>
+                <p class="params">Player count : </p><span class="choice" id="player-count">8</span>
+                <p class="params">Bot fill : </p><span class="choice" id="bot-fill">OFF</span>
+                <p class="params"> Game mode : </p><span class="choice" id="game-mode"> Classic</span>
             </div>
-            <button class="create-game" id="create-btn">Create Game ✔️</button>
+            <button class="create-game" id="create-btn">Create Game ⭐</button>
         </section>
     </div>
 
