added Title To Main Game added Theme Selector WARNING : white theme not fully functionnal ( clicked border color )

--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pipopinette</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap" rel="stylesheet">
     <script src="/socket.io/socket.io.js"></script>
     <script src="creatingDom.js" defer async=false></script>
+    <link rel="stylesheet" href="style.css">
     <script src="index.js" defer async=false></script>
+    <script src="themeManager.js" defer></script>
 </head>
 
 <body>
-    <main class="game" id="game">
+    <div class="title-container">
+        <h1 class="main-title blue">Pipopipette</h1>
+        <h1 class="main-title red">Pipopipette</h1>
+    </div>
 
+    <main class="game" id="game">
     </main>
     <h1>Scores</h1>
     <h3 id="first-score" class="player-score">X</h3>
     <h3 id="second-score" class="player-score">Y</h3>
     <div class="my-player" id="my-player"></div>
+    <button class="theme-selector" id="theme-selector">☀️</button>
 </body>
 
 </html>
