--- a/public/menu.html
+++ b/public/menu.html
@@ -9,14 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="menu-style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="menu-style.css">
     <script defer src="menu-main.js"></script>
 </head>
 
 <body>
-    <div class="title-container"> a
+    <div class="title-container">
         <h1 class="main-title blue">Pipopipette</h1>
         <h1 class="main-title red">Pipopipette</h1>
     </div>
@@ -35,8 +34,8 @@
                 <p class="params">Bot fill : </p><span class="choice" id="bot-fill">OFF</span>
                 <p class="params"> Game mode : </p><span class="choice" id="game-mode"> Classic</span>
             </div>
-            <button class="create-game" id="create-btn">Create Game ⭐</button>
         </section>
+        <button class="create-game" id="create-btn">Create Game ⭐</button>
     </div>
 
 
