--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pipopinette</title>
+    <title>Pipopipette</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap" rel="stylesheet">
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="creatingDom.js" defer async=false></script>
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js" defer async=false></script>
-    <script src="themeManager.js" defer></script>
+    <link rel="stylesheet" href="menu-style.css">
+    <script defer src="menu-main.js"></script>
 </head>
 
 <body>
@@ -23,13 +20,25 @@
         <h1 class="main-title red">Pipopipette</h1>
     </div>
 
-    <main class="game" id="game">
-    </main>
-    <h1>Scores</h1>
-    <h3 id="first-score" class="player-score">X</h3>
-    <h3 id="second-score" class="player-score">Y</h3>
-    <div class="my-player" id="my-player"></div>
-    <button class="theme-selector" id="theme-selector">☀️</button>
+
+    <div class="container">
+        <section class="join">
+            <input type="text" class="join-input" id="join-input" placeholder="Join a Game (copy link or ID)">
+            <button class="enter-game" id="join-btn">⭐</button>
+        </section>
+        <div class="divisor"></div>
+        <section class="create">
+            <h4 class="create-title">Or create one : </h4>
+            <div class="settings">
+                <p class="params">Player count : </p><span class="choice" id="player-count">8</span>
+                <p class="params">Bot fill : </p><span class="choice" id="bot-fill">OFF</span>
+                <p class="params"> Game mode : </p><span class="choice" id="game-mode"> Classic</span>
+            </div>
+        </section>
+        <button class="create-game" id="create-btn">Create Game ⭐</button>
+    </div>
+
+
 </body>
 
 </html>
