Form to join game ( enter will submit) Rework un peu du code

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,11 @@
 
     <div class="container">
         <section class="join">
-            <input type="text" class="join-input" id="join-input" placeholder="Join a Game (copy link or ID)">
-            <button class="enter-game" id="join-btn">⭐</button>
+            <form action="" class="join-form" id="join-form" autocomplete="off">
+                <input type="text" class="join-input" id="join-input" placeholder="Join a Game (copy link or ID)">
+                <input type="submit" class="enter-game" id="join-btn" value="⭐">
+
+            </form>
         </section>
         <div class="divisor"></div>
         <section class="create">
