--- a/main.html
+++ b/main.html
@@ -16,8 +16,9 @@
 
     </main>
     <h1>Scores</h1>
-    <h3 id="first-score" class="player-score">X</h3>
-    <h3 id="second-score" class="player-score">Y</h3>
+    <h3 id="first-score" class="player-score">0</h3>
+    <h3 id="second-score" class="player-score">0</h3>
 </body>
 
 </html>
+
