--- a/main.html
+++ b/main.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
+    <h1>Scores</h1>
+    <p id="first-score" class="player-score">0</p> 
+    <p id="second-score" class="player-score">0</p>
     <main class="game" id="game">
 
     </main>
-    <h1>Scores</h1>
-    <h3 id="first-score" class="player-score">0</h3>
-    <h3 id="second-score" class="player-score">0</h3>
+
 </body>
 
 </html>
