--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="playeractu" id="playeractu"></div>
     <h1>Scores</h1>
     <p id="first-score" class="player-score">0</p> 
     <p id="second-score" class="player-score">0</p>
