--- a/main.html
+++ b/main.html
@@ -5,17 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pipopinette</title>
+    <title> CARREZ</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer async=false></script>
+    <link rel="icon" href="Capture d’écran (2).png"
+    >
 
 </head>
 
 <body>
-    <div class="playeractu" id="playeractu"></div>
+    <div class="playeractu" id="playeractu"> <p></p></div>
     <h2>Scores</h2>
-    <p id="first-score" class="player-score">0</p> 
-    <p id="second-score" class="player-score">0</p>
+    <p><span id="first-score" class="player-score">0</span> : 
+    <span id="second-score" class="player-score">0</span></p>
     <main class="game" id="game">
 
     </main>
@@ -23,4 +25,3 @@
 </body>
 
 </html>
-
