--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="menu-style.css" />
+    <link rel="stylesheet" href="menu-style2.css" />
     <script defer src="menu-main.js"></script>
   </head>
 
   <body>
     <div class="title-container">
       <h1 class="main-title blue">Pipopipette</h1>
-      <h1 class="main-title red">Pipopipette</h1>
     </div>
 
     <div class="container">
