--- a/landingpage.html
+++ b/landingpage.html
@@ -16,7 +16,7 @@
             Carrez
           </span>
         </p></div>
-        <a href="main.html"><button>1vs1 local</button></a>
-        <a href=""><button>1vs1 online</button></a>
+        <a href="main.html"><button>1VS1 LOCAL</button></a>
+        <a href=""><button>1VS1 ONLINE</button></a>
 </body>
 </html>
