--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pipopipette</title>
+    <title>PIPOPIPETTE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +21,7 @@
 
   <body>
     <div class="title-container">
-      <h1 class="main-title blue">Pipopipette</h1>
+      <h1><span>CARRE VIP</span></h1>
     </div>
 
     <div class="container">
