commit 06/02 subpage finie

--- a/public/subpage.html
+++ b/public/subpage.html
@@ -12,7 +12,7 @@
        <h1  class="title-container">
         <span>CARRE VIP</span></h1>
     <div class="container-connexion">
-        <h2>Se connecter</h2>
+        <h2 class="connexion">Se connecter</h2>
         <input type="text"
             class="mail-input"
             id="mail"
@@ -24,7 +24,7 @@
         <button class="button" onclick="getInfoConnexion()">Connexion</button>  
     </div>
     <div class="container-inscription">
-        <h2>S'inscrire</h2>
+        <h2 class="inscription">S'inscrire</h2>
         <input type="text"
             class="mail-input"
             id="mail-inscri"
