--- a/public/subpage.html
+++ b/public/subpage.html
@@ -10,7 +10,7 @@
 </head>
 <body>
        <h1  class="title-container">
-        <span>CARRE VIP</span></h1>
+        <span>Pipopipette</span></h1>
     <div class="container-connexion">
         <h2 class="connexion">Se connecter</h2>
         <input type="text"
