--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
   <body>
     <div class="title-container">
-      <h1><span>CARRE VIP</span></h1>
+      <h1><span>Pipopipette</span></h1>
     </div>
 
     <div class="container">
